[gd_scene load_steps=2 format=3 uid="uid://dmvikv0mb22rk"]

[ext_resource type="Script" uid="uid://vt46scjtgrst" path="res://slot_machine.gd" id="1_agdmm"]

[node name="slot_machine" type="Node"]
script = ExtResource("1_agdmm")
symbols = ["dieRed1.png", "dieRed2.png", "dieRed3.png", "dieRed4.png", "dieWhite1.png", "dieWhite2.png", "dieWhite3.png", "dieWhite4.png"]

[node name="Button" type="Button" parent="."]
offset_left = 139.0
offset_top = 233.0
offset_right = 181.0
offset_bottom = 264.0
text = "Spin
"

[node name="btn1" type="Button" parent="."]
custom_minimum_size = Vector2(68, 68)
offset_left = -34.0
offset_top = 500.0
offset_right = 34.0
offset_bottom = 568.0
text = "+ 1
"

[node name="btn5" type="Button" parent="."]
custom_minimum_size = Vector2(68, 68)
offset_left = 66.0
offset_top = 500.0
offset_right = 134.0
offset_bottom = 568.0
text = "+ 5
"

[node name="btn5timer" type="Timer" parent="btn5"]
wait_time = 0.3
one_shot = true

[node name="btn2" type="Button" parent="."]
custom_minimum_size = Vector2(68, 68)
offset_left = 166.0
offset_top = 500.0
offset_right = 234.0
offset_bottom = 568.0
text = "X 2
"

[node name="btn10" type="Button" parent="."]
custom_minimum_size = Vector2(68, 68)
offset_left = 266.0
offset_top = 500.0
offset_right = 334.0
offset_bottom = 568.0
text = "X 10
"

[node name="btn25" type="Button" parent="."]
custom_minimum_size = Vector2(68, 68)
offset_left = 366.0
offset_top = 500.0
offset_right = 434.0
offset_bottom = 568.0
text = "X 25
"

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(200, 300)
scale = Vector2(0.5, 1)

[node name="AvailablePanel" type="Panel" parent="."]
custom_minimum_size = Vector2(130, 70)
offset_left = -34.0
offset_top = 400.0
offset_right = 6.0
offset_bottom = 440.0

[node name="AvailableTickets" type="Label" parent="AvailablePanel"]
custom_minimum_size = Vector2(130, 69)
layout_mode = 0
offset_right = 130.0
offset_bottom = 69.0
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BetPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(130, 68)
offset_left = 138.0
offset_top = 400.0
offset_right = 268.0
offset_bottom = 468.0

[node name="Bet" type="Label" parent="BetPanel"]
custom_minimum_size = Vector2(130, 68)
layout_mode = 0
offset_right = 130.0
offset_bottom = 68.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LastWon" type="Panel" parent="."]
custom_minimum_size = Vector2(130, 68)
offset_left = 300.0
offset_top = 400.0
offset_right = 430.0
offset_bottom = 468.0

[node name="LastWon2" type="Label" parent="LastWon"]
custom_minimum_size = Vector2(130, 68)
layout_mode = 0
offset_right = 130.0
offset_bottom = 68.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="btn1" to="." method="_on_btn_1_pressed"]
[connection signal="pressed" from="btn5" to="." method="_on_btn_5_pressed"]
[connection signal="timeout" from="btn5/btn5timer" to="." method="_on_btn_5_timer_timeout"]
[connection signal="pressed" from="btn2" to="." method="_on_btn_2_pressed"]
[connection signal="pressed" from="btn10" to="." method="_on_btn_10_pressed"]
[connection signal="pressed" from="btn25" to="." method="_on_btn_25_pressed"]
